fix footer on small screens

--- a/forrest-fenske/src/Footer.css
+++ b/forrest-fenske/src/Footer.css
@@ -1,15 +1,11 @@
 .footer {
-    position: absolute;
-    transform: translateX(-50%);
-    left: 50%;
+    position: relative;
     width: 300px;
     margin: -50px auto auto;
 }
 
 .gallery-footer {
-    position: absolute;
-    transform: translateX(-50%);
-    left: 50%;
+    position: relative;
     width: 300px;
     margin: -150px auto auto;
     background-color: rgba(0, 0, 0, 0.15);
